--- a/landing.html
+++ b/landing.html
@@ -25,13 +25,183 @@
             50% { transform: translateY(-20px); }
         }
 
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+
+        @keyframes sizePulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.03); }
+        }
+
+        @keyframes gradientFlow {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        @keyframes subtleGradientFlow {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .pulse-button {
+            animation: sizePulse 2s ease-in-out infinite;
+        }
+
+        .pulse-button:hover {
+            animation: none;
+            transform: scale(1.05);
+        }
+
+        .gradient-text {
+            background-size: 200% auto;
+            animation: gradientFlow 3s ease infinite;
+        }
+
+        .subtle-gradient-text {
+            background-size: 200% auto;
+            animation: subtleGradientFlow 3s ease infinite;
+        }
+
         body {
             -ms-overflow-style: none;
             scrollbar-width: none;
+            transition: background-color 1s ease;
         }
 
         ::-webkit-scrollbar {
             display: none;
+        }
+
+        /* Smooth dark mode transition */
+        body {
+            transition: background-color 2s ease, color 2s ease;
+        }
+
+        body.dark-mode {
+            background: #1a202c;
+            color: #fff;
+        }
+
+        body.dark-mode .clay-surface {
+            transition: background-color 2s ease, border-color 2s ease, box-shadow 2s ease;
+            background: rgba(26, 32, 44, 0.3);
+            border-color: rgba(255, 255, 255, 0.1);
+            box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.2),
+                       -8px -8px 16px rgba(255, 255, 255, 0.05);
+        }
+
+        body.dark-mode .text-gray-700 {
+            transition: color 2s ease;
+            color: #ffffff;
+        }
+
+        body.dark-mode .text-gray-600 {
+            transition: color 2s ease;
+            color: #ffffff;
+        }
+
+        body.dark-mode .text-gray-800 {
+            transition: color 2s ease;
+            color: #ffffff;
+        }
+
+        body.dark-mode .bg-gray-100\/95 {
+            transition: background-color 2s ease;
+            background: rgba(26, 32, 44, 0.95);
+        }
+
+        body.dark-mode .border-gray-200 {
+            transition: border-color 2s ease;
+            border-color: rgba(255, 255, 255, 0.1);
+        }
+
+        body.dark-mode .pulse-button {
+            transition: color 2s ease;
+            color: #fff !important;
+        }
+
+        body.dark-mode .pulse-button i {
+            transition: color 2s ease;
+            color: #fff !important;
+        }
+
+        body.dark-mode h1 {
+            transition: background 2s ease;
+            background: linear-gradient(to right, #ffffff, #4a5568, #ffffff) !important;
+            background-size: 200% auto !important;
+            -webkit-background-clip: text !important;
+            background-clip: text !important;
+            animation: gradientFlow 1.5s ease infinite !important;
+        }
+
+        /* New dark mode toggle styles */
+        .theme-toggle {
+            position: relative;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: #e2e8f0;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .theme-toggle i {
+            font-size: 20px;
+            color: #ffd166;
+            transition: all 0.3s ease;
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.05);
+        }
+
+        .theme-toggle.checked {
+            background: #4a5568;
+        }
+
+        .theme-toggle.checked i {
+            color: #ffffff;
+        }
+
+        /* Sticky navbar */
+        nav {
+            position: sticky;
+            top: 0;
+            z-index: 50;
+        }
+
+        body.dark-mode .testimonial-card {
+            box-shadow: none !important;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        body.dark-mode .title-card {
+            box-shadow: none !important;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        body.dark-mode .testimonial-title {
+            background: linear-gradient(to right, #ffffff, #a0aec0);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
+        .testimonial-title {
+            background: linear-gradient(to right, #000000, #718096);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            margin-bottom: 36px;
+            padding-bottom: 8px;
         }
     </style>
 </head>
@@ -43,21 +213,26 @@
                 <div class="flex items-center gap-2">
                     <span class="text-xl font-bold text-gray-800">UISpell</span>
                 </div>
+                <div class="flex items-center gap-4">
+                    <div class="theme-toggle" id="themeToggle">
+                        <i class="fa fa-sun-o"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <div class="container mx-auto px-4 py-20 relative z-10">
-        <div class="rounded-3xl px-12 pb-24 pt-12 text-center max-w-5xl mx-auto" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
-            <h1 class="text-6xl font-bold mb-8 bg-gradient-to-r from-green-600 to-red-600 bg-clip-text text-transparent leading-normal pb-4">
+    <div class="container mx-auto px-4 py-12 relative z-10">
+        <div class="rounded-3xl px-12 pb-16 pt-10 text-center max-w-5xl mx-auto title-card" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
+            <h1 class="text-6xl font-bold mb-8 bg-gradient-to-r from-[#06d6a0] to-[#ef476f] bg-clip-text text-transparent leading-normal pb-4 animate-gradient" style="background-size: 200% auto; animation: gradientFlow 3s ease infinite;">
                 Master Spelling Through Play
             </h1>
             <p class="text-xl text-gray-700 mb-12">
-                Transform spelling practice into an engaging adventure with adaptive challenges, instant feedback, and rewarding progress tracking.
+                Transform UIL spelling practice into an engaging adventure with the power of instant feedback, progress tracking, and AI.
             </p>
             <div class="flex justify-center">
-                <a href="index.html" class="clay-surface inline-block px-12 py-4 text-xl font-bold rounded-full hover:scale-105 transition-transform">
+                <a href="index.html" class="clay-surface inline-block px-12 py-4 text-xl font-bold rounded-full transition-transform pulse-button" style="color: #1a202c;">
                     Start Learning <i class="fa fa-rocket ml-2"></i>
                 </a>
             </div>
@@ -68,26 +243,26 @@
     <div class="container mx-auto px-4 py-16 grid md:grid-cols-3 gap-8 max-w-6xl">
         <div class="clay-surface p-8 rounded-2xl">
             <div class="w-16 h-16 clay-surface rounded-2xl mb-4 flex items-center justify-center">
-                <i class="fa fa-graduation-cap text-3xl text-green-600"></i>
+                <i class="fa fa-graduation-cap text-3xl text-[#06d6a0]"></i>
             </div>
-            <h3 class="text-2xl font-bold mb-3">Learning Resources</h3>
-            <p class="text-gray-600">Comprehensive guides, word lists, and etymology references for UIL competitors</p>
+            <h3 class="text-2xl font-bold mb-3 text-gray-800">Learning Resources 📚</h3>
+            <p class="text-gray-700">Comprehensive guides, word lists, and etymology references for UIL competitors</p>
         </div>
 
         <div class="clay-surface p-8 rounded-2xl">
             <div class="w-16 h-16 clay-surface rounded-2xl mb-4 flex items-center justify-center">
-                <i class="fa fa-users text-3xl text-red-600"></i>
+                <i class="fa fa-users text-3xl text-[#ef476f]"></i>
             </div>
-            <h3 class="text-2xl font-bold mb-3">Team Challenges</h3>
-            <p class="text-gray-600">Collaborative jeopardy mode for group practice sessions and classroom use</p>
+            <h3 class="text-2xl font-bold mb-3 text-gray-800">Team Challenges 👥</h3>
+            <p class="text-gray-700">Collaborative jeopardy mode for group practice sessions and classroom use</p>
         </div>
 
         <div class="clay-surface p-8 rounded-2xl">
             <div class="w-16 h-16 clay-surface rounded-2xl mb-4 flex items-center justify-center">
-                <i class="fa fa-code text-3xl text-yellow-600"></i>
+                <i class="fa fa-code text-3xl text-[#ffd166]"></i>
             </div>
-            <h3 class="text-2xl font-bold mb-3">Open Source</h3>
-            <p class="text-gray-600">100% free and open source platform built by educators for the community</p>
+            <h3 class="text-2xl font-bold mb-3 text-gray-800">Open Source 💻</h3>
+            <p class="text-gray-700">100% free and open source platform built by educators for the community</p>
         </div>
     </div>
 
@@ -96,19 +271,19 @@
         <div class="clay-surface rounded-2xl p-8">
             <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
                 <div>
-                    <div class="text-4xl font-bold text-green-600">1.5k+</div>
+                    <div class="text-4xl font-bold bg-gradient-to-r from-[#06d6a0] to-[#06d6a0] bg-clip-text text-transparent subtle-gradient-text">1.5k+</div>
                     <div class="text-gray-600">UIL Words</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-green-600">4k+</div>
+                    <div class="text-4xl font-bold bg-gradient-to-r from-[#06d6a0] to-[#06d6a0] bg-clip-text text-transparent subtle-gradient-text">4k+</div>
                     <div class="text-gray-600">Outside Words</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-yellow-600">100%</div>
+                    <div class="text-4xl font-bold bg-gradient-to-r from-[#ffd166] to-[#ffd166] bg-clip-text text-transparent subtle-gradient-text">100%</div>
                     <div class="text-gray-600">Free</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-yellow-600">100%</div>
+                    <div class="text-4xl font-bold bg-gradient-to-r from-[#ffd166] to-[#ffd166] bg-clip-text text-transparent subtle-gradient-text">100%</div>
                     <div class="text-gray-600">Open Source</div>
                 </div>
             </div>
@@ -117,75 +292,79 @@
 
     <!-- Testimonials Section -->
     <div class="container mx-auto px-4 py-16 max-w-6xl">
-        <h2 class="text-4xl font-bold text-center mb-12 bg-gradient-to-r from-green-600 to-red-600 bg-clip-text text-transparent">What Our Users Say</h2>
+        <h2 class="text-4xl font-bold text-center testimonial-title">What Our Users Say</h2>
         <div class="grid md:grid-cols-3 gap-8">
-            <div class="rounded-2xl p-6" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
+            <div class="rounded-2xl p-6 testimonial-card" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
                 <div class="flex items-center mb-4">
-                    <div class="w-12 h-12 rounded-full bg-gradient-to-r from-green-600 to-red-600 flex items-center justify-center text-white font-bold text-xl">JD</div>
+                    <div class="w-12 h-12 rounded-full bg-gradient-to-r from-[#06d6a0] to-[#ef476f] flex items-center justify-center text-white font-bold text-xl">JD</div>
                     <div class="ml-4">
                         <h4 class="font-bold text-gray-800">John Doe</h4>
                         <p class="text-sm text-gray-600">UIL Coach</p>
                     </div>
                 </div>
-                <p class="text-gray-700">"This platform has transformed how my students prepare for competitions. The adaptive learning system is incredibly effective."</p>
+                <p class="text-gray-700 mb-4">"This platform has transformed how my students prepare for competitions. The adaptive learning system is incredibly effective."</p>
             </div>
-            <div class="rounded-2xl p-6" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
+            <div class="rounded-2xl p-6 testimonial-card" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
                 <div class="flex items-center mb-4">
-                    <div class="w-12 h-12 rounded-full bg-gradient-to-r from-green-600 to-red-600 flex items-center justify-center text-white font-bold text-xl">AS</div>
+                    <div class="w-12 h-12 rounded-full bg-gradient-to-r from-[#06d6a0] to-[#ef476f] flex items-center justify-center text-white font-bold text-xl">AS</div>
                     <div class="ml-4">
                         <h4 class="font-bold text-gray-800">Alice Smith</h4>
                         <p class="text-sm text-gray-600">Student</p>
                     </div>
                 </div>
-                <p class="text-gray-700">"The practice sessions are so engaging! I've improved my spelling skills significantly since using UISpell."</p>
+                <p class="text-gray-700 mb-4">"The practice sessions are so engaging! I've improved my spelling skills significantly since using UISpell."</p>
             </div>
-            <div class="rounded-2xl p-6" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
+            <div class="rounded-2xl p-6 testimonial-card" style="box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15), inset 0 0 12px rgba(255, 255, 255, 0.8);">
                 <div class="flex items-center mb-4">
-                    <div class="w-12 h-12 rounded-full bg-gradient-to-r from-green-600 to-red-600 flex items-center justify-center text-white font-bold text-xl">RB</div>
+                    <div class="w-12 h-12 rounded-full bg-gradient-to-r from-[#06d6a0] to-[#ef476f] flex items-center justify-center text-white font-bold text-xl">RB</div>
                     <div class="ml-4">
                         <h4 class="font-bold text-gray-800">Robert Brown</h4>
                         <p class="text-sm text-gray-600">Parent</p>
                     </div>
                 </div>
-                <p class="text-gray-700">"As a parent, I appreciate how this tool makes learning fun while being completely free and open source."</p>
+                <p class="text-gray-700 mb-4">"As a parent, I appreciate how this tool makes learning fun while being completely free and open source."</p>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer class="border-t-2 border-white/50 mt-16">
-        <div class="container mx-auto px-4 py-8">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <h4 class="text-lg font-bold mb-4">UISpell 📚</h4>
-                    <p class="text-gray-600">Where tech meets the dictionary</p>
-                </div>
-                <div>
-                    <h4 class="text-lg font-bold mb-4">Resources 📖</h4>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-600 hover:text-black">Word Lists</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-black">Practice Guides</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-black">Competition Tips</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-lg font-bold mb-4">About 📜</h4>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-600 hover:text-black">Our Mission</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-black">Contact</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-black">Contribute</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-lg font-bold mb-4">Open Source 🤖</h4>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-600 hover:text-black">GitHub Repository</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-black">Documentation</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-black">License</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="footer-placeholder" class="pl-4"></div>
 </body>
+<script>
+    // Load footer component
+    fetch('components/footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('footer-placeholder').innerHTML = data;
+        });
+
+    // Theme toggle functionality
+    const themeToggle = document.getElementById('themeToggle');
+    const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)');
+
+    // Initialize theme based on localStorage or system preference
+    const darkMode = localStorage.getItem('darkMode');
+    if (darkMode === 'true' || (!darkMode && prefersDarkScheme.matches)) {
+        document.body.classList.add('dark-mode');
+        themeToggle.classList.add('checked');
+        themeToggle.querySelector('i').className = 'fa fa-moon-o';
+    }
+
+    themeToggle.addEventListener('click', () => {
+        const isDark = document.body.classList.toggle('dark-mode');
+        themeToggle.classList.toggle('checked');
+        themeToggle.querySelector('i').className = isDark ? 'fa fa-moon-o' : 'fa fa-sun-o';
+        localStorage.setItem('darkMode', isDark);
+    });
+
+    // Listen for system theme changes
+    prefersDarkScheme.addEventListener('change', (e) => {
+        if (!localStorage.getItem('darkMode')) {
+            const isDark = e.matches;
+            document.body.classList.toggle('dark-mode', isDark);
+            themeToggle.classList.toggle('checked', isDark);
+            themeToggle.querySelector('i').className = isDark ? 'fa fa-moon-o' : 'fa fa-sun-o';
+        }
+    });
+</script>
 </html>
