--- a/jeopardy.html
+++ b/jeopardy.html
@@ -76,20 +76,20 @@
         .jeopardy-board {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
-            gap: 0.5rem;
-            margin: 1rem;
-            height: calc(100vh - 2rem);
+            gap: 1vw;
+            margin: 1vh;
+            height: calc(100vh - 2vh);
             padding-right: 0;
-            padding-top: 1rem;
+            padding-top: 1vh;
         }
 
         .jeopardy-category {
             background: #023047;
             color: white;
-            padding: 1rem;
+            padding: 1.5vh;
             text-align: center;
             font-weight: bold;
-            font-size: 1.2rem;
+            font-size: clamp(1rem, 1.5vw, 1.5rem);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -101,10 +101,10 @@
 
         .jeopardy-value {
             background: #023047;
-            padding: 1rem;
+            padding: 1.5vh;
             text-align: center;
             cursor: pointer;
-            font-size: 2rem;
+            font-size: clamp(1.5rem, 3vw, 3rem);
             font-weight: bold;
             display: flex;
             align-items: center;
@@ -126,7 +126,7 @@
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
-            font-size: 2.5rem;
+            font-size: clamp(2rem, 4vw, 4rem);
             font-weight: 900;
             text-shadow: 0 0 10px rgba(255, 183, 3, 0.3);
             animation: gradientFlow 2s ease infinite;
@@ -163,9 +163,10 @@
         /* Team panel styles */
         .team-panel {
             position: fixed;
-            right: -300px;
+            right: -25vw;
             top: 0;
-            width: 300px;
+            width: 25vw;
+            min-width: 250px;
             height: 100vh;
             background: white;
             transition: right 0.3s ease;
@@ -186,8 +187,8 @@
             right: 0;
             top: 50%;
             transform: translateY(-50%);
-            width: 24px;
-            height: 32px;
+            width: clamp(24px, 3vw, 40px);
+            height: clamp(32px, 4vw, 50px);
             background: rgba(44, 82, 130, 0.8);
             display: flex;
             align-items: center;
@@ -206,7 +207,7 @@
 
         .team-panel-toggle i {
             color: rgba(255, 209, 102, 0.8);
-            font-size: 12px;
+            font-size: clamp(12px, 1.5vw, 20px);
             transition: transform 0.3s ease;
         }
 
@@ -215,8 +216,8 @@
         }
 
         .team-panel-content {
-            padding: 1.5rem;
-            width: 300px;
+            padding: 2vh;
+            width: 100%;
             height: 100%;
             overflow-y: auto;
             color: #1a202c;
@@ -228,14 +229,14 @@
 
         .team-card {
             background: white;
-            padding: 1rem;
-            margin-bottom: 1rem;
+            padding: 1.5vh;
+            margin-bottom: 1.5vh;
             border-radius: 8px;
             box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
             border: 1px solid rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
-            gap: 1rem;
+            gap: 1vw;
         }
 
         .team-card h3 {
@@ -243,10 +244,11 @@
             color: #023047;
             margin: 0;
             flex: 1;
+            font-size: clamp(1rem, 1.2vw, 1.5rem);
         }
 
         .team-score {
-            font-size: 1.2rem;
+            font-size: clamp(1.2rem, 1.5vw, 2rem);
             font-weight: bold;
             color: #fb8500;
         }
